--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,39 @@
+*,
+*::before,
+*::after{
+    box-sizing: border-box;
+}
+
+
 .body{
     background-color:#ECECEC;
     font-family: 'Roboto';
     font-style: normal;
 }
+.list{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+h1, h2, h3, p{
+    margin: 0;
+}
+
+.container{
+    width: 1200px; 
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    /* outline: 1px solid red; */
+ 
+}
+.header-container{
+    display: flex;
+    align-items: center;
+}
+
 ul{
     list-style: none;
 }
@@ -10,6 +41,8 @@ ul{
     background-color: #ECECEC;
 
 }
+
+
 
 .logo{
     text-decoration: none;
@@ -19,9 +52,9 @@ ul{
     font-size: 26px;
     line-height: 31px;
     /* identical to box height */
-    
+    align-items: center;
     letter-spacing: 0.03em;
-    
+    margin-right: 93px;
     color: black;
 
 }
@@ -36,10 +69,103 @@ ul{
     /* identical to box height */
     
     letter-spacing: 0.03em;
-}
+   
+} 
 .accent{
     color: #2196F3;
 }
+.navigation-list{
+    display: flex;
+    align-items: center;
+}
+
+.navigation-item{
+    margin-right: 50px;
+}
+.navigation-item:last-child{
+    margin: 0;
+}
+
+.navigation-link{
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+.link-st{
+    text-decoration: none;
+    font-family: 'Roboto';
+    display: block;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    color: #212121;
+
+}
+.link-st:focus,
+.link-st:hover
+{
+    color: #2196F3;
+}
+
+
+.header-gruop{
+    margin-left: auto;
+}
+.header-gruop-list{
+    
+    display: flex;
+    align-items: center;
+   
+}
+
+.header-gruop-item{
+    margin-right: 50px;
+    
+}
+
+
+ 
+.portfolio-list{
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.portfolio-item{
+    margin-right: 8px;
+}
+.portfolio-item :last-child{
+    margin: 0;
+}
+
+.projects-list{
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.projects-item {
+   width: 370px;
+   margin-bottom: 30px;
+}
+
+
+/* .projects-item :nth-child(3n){
+    margin-right: 0;
+} */
+.projects-item :nth-last-child(-n+3){
+    margin-bottom: 0;
+}
+.projects-item :not(nth-child(3n)){
+    margin-right: 30px;
+}
+    
+
 
 .link{
     font-family: 'Roboto';
@@ -52,23 +178,7 @@ ul{
     color: #212121;
 
 }
-.link-st{
-    text-decoration: none;
-    font-family: 'Roboto';
-    
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.02em;
 
-    color: #212121;
-
-}
-.link-st:focus,
-.link-st:hover
-{
-    color: #2196F3;
-}
 
 .mail{
     text-decoration: none;
@@ -79,8 +189,11 @@ ul{
     font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.02em;
-    
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
     color: #757575;
+    
 
 }
 .mail:hover{
@@ -94,16 +207,20 @@ ul{
     font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.02em;
-    
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
     color: #757575;
+    
 
 }
 
 .cap{
     background-color: #2F303A;
-    
-
+   text-align: center;
+   
 }
+
 .title{
     font-family: 'Roboto';
     font-style: normal;
@@ -117,9 +234,18 @@ ul{
     text-transform: uppercase;
     
     color: #FFFFFF;
+    padding-top: 200px;
+    padding-bottom: 280px;
+    padding-left: 452px;
+    padding-right: 452px;
+    min-width: 696px;
+    
+    margin-bottom: 30px;
+    display: flex;
+    
 }
 .btn{
-
+    padding: 10px 32px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -127,44 +253,138 @@ ul{
     line-height: 30px;
     /* identical to box height, or 188% */
 
-    display: flex;
+   
     align-items: center;
-    text-align: center;
+    
     letter-spacing: 0.06em;
     background-color: blue;
     color: white;
+    min-width: 200px;
+    border: 1px solid transparent;
+    
 }
-.btn :hover{
-    color: #188CE8;
+
+.filter-list{
+    display: flex;
+    margin-top: 94px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
-.butn{
+
+.btn:hover{ 
+    border-color: #188CE8;
+
+}
+    
+    
+.butt-one{
+    padding: 6px 22px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 26px;
     /* identical to box height, or 162% */
-    
+
+    border-radius: 4px;
     text-align: center;
     letter-spacing: 0.03em;
     color: white;
     background-color: blue;
+    min-width: 73px;
+    border: 1px solid transparent;
+
 }
-.butt{
+.butt-two{
+    padding: 6px 22px;
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 26px;
-/* identical to box height, or 162% */
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    /* identical to box height, or 162% */
 
-text-align: center;
-letter-spacing: 0.03em;
-
-color: #212121;
+    text-align: center;
+    letter-spacing: 0.03em;
+    min-width: 128px;
+    color: #212121;
+    border-radius: 4px;
+    border: 1px solid transparent;
 
 }
+.butt-three{
+    padding: 6px 22px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    /* identical to box height, or 162% */
 
+    text-align: center;
+    letter-spacing: 0.03em;
+    min-width: 145px;
+    color: #212121;
+    border-radius: 4px;
+    border: 1px solid transparent;
+
+}
+.butt-four{
+    padding: 6px 22px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    /* identical to box height, or 162% */
+
+    text-align: center;
+    letter-spacing: 0.03em;
+    min-width: 103px;
+    color: #212121;
+    border-radius: 4px;
+    border: 1px solid transparent;
+
+}
+.butt-five{
+    padding: 6px 22px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    /* identical to box height, or 162% */
+
+    text-align: center;
+    letter-spacing: 0.03em;
+    min-width: 130px;
+    color: #212121;
+    border-radius: 4px;
+     border: 1px solid transparent;
+
+}
+.description{
+    margin-top: 94px;
+}
+
+.description-list{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+}
+.description-item{
+    margin-right: 30px;
+    width: 270px;
+    
+}
+.description-item :last-child{
+    margin: 0;
+}
 .desc{
     font-family: 'Roboto';
     font-style: normal;
@@ -189,6 +409,18 @@ color: #212121;
     
     color: #757575;
 }
+.img{
+    margin-top: 69px;
+}
+
+.img-b{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-top: 50px;
+}
 
 .img-title{
     font-family: 'Roboto';
@@ -204,6 +436,7 @@ color: #212121;
 
 .our-team{
     background-color: #ECECEC;
+    margin-top: 110px;
 
 }
 .our-title{
@@ -214,8 +447,22 @@ color: #212121;
     line-height: 42px;
     text-align: center;
     letter-spacing: 0.03em;
-    
+    margin-top: 95px;
     color: #212121;
+}
+.our-team-list{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    margin-top: 68px;
+}
+.our-team-item{
+    margin-right: 30px;
+    
+}
+.our-team-item :last-child{
+    margin: 0;
 }
 
 .img-naim{
@@ -244,9 +491,15 @@ color: #212121;
 
     color: #757575;
 }
+.portfolio{
+    margin-top: 94px;
+}
 .footer{
     background-color: #2F303A;
-
+    margin-top: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    
 }
 
 .adres{
@@ -265,15 +518,15 @@ color: #212121;
 }
 .adres-s{
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 24px;
-/* or 171% */
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */
 
-letter-spacing: 0.03em;
-text-decoration: none;
-color: #FFFFFF;
+    letter-spacing: 0.03em;
+    text-decoration: none;
+    color: #FFFFFF;
 
 }
 h3{
