--- a/css/styles.css
+++ b/css/styles.css
@@ -19,14 +19,19 @@
 h1, h2, h3, p{
     margin: 0;
 }
+h3{
+    padding-bottom: 10px;
+    padding-top: 30px;
+    width: 370px;
+}
 
 .container{
-    width: 1200px; 
+    width: 1230px; 
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    /* outline: 1px solid red; */
+    
  
 }
 .header-container{
@@ -37,10 +42,7 @@ h1, h2, h3, p{
 ul{
     list-style: none;
 }
-.page-header{
-    background-color: #ECECEC;
 
-}
 
 
 
@@ -51,7 +53,7 @@ ul{
     font-weight: 700;
     font-size: 26px;
     line-height: 31px;
-    /* identical to box height */
+    
     align-items: center;
     letter-spacing: 0.03em;
     margin-right: 93px;
@@ -66,7 +68,7 @@ ul{
     font-weight: 700;
     font-size: 26px;
     line-height: 31px;
-    /* identical to box height */
+    margin-top: 60px;
     
     letter-spacing: 0.03em;
    
@@ -125,7 +127,10 @@ ul{
     margin-right: 50px;
     
 }
-
+.portfolio{
+    padding-top: 94px;
+    width: 1200;
+}
 
  
 .portfolio-list{
@@ -133,6 +138,9 @@ ul{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 34px;
+
+    
     
 }
 .portfolio-item{
@@ -142,28 +150,36 @@ ul{
     margin: 0;
 }
 
+
 .projects-list{
     flex-wrap: wrap;
     display: flex;
-    justify-content: center;
     align-items: center;
-    
+    justify-content: center;
+   
 }
-.projects-item {
-   width: 370px;
-   margin-bottom: 30px;
-}
-
-
-/* .projects-item :nth-child(3n){
-    margin-right: 0;
-} */
-.projects-item :nth-last-child(-n+3){
-    margin-bottom: 0;
-}
-.projects-item :not(nth-child(3n)){
+.projects-item{
     margin-right: 30px;
+    width: 370px;
 }
+
+/* .projects-item :last-child{
+    margin: 0;
+} */
+.projects-naim{
+    padding: 20px 24px 20px 24px;
+    border: 1px solid transparent;
+}
+
+.projects-item :nth-child(3n){
+    margin-right: 0;
+} 
+/* .projects-item :nth-last-child(-n+3){
+    margin-bottom: 0;
+} */
+/* .projects-item :not(nth-child(3n)){
+    margin-right: 30px;
+} */
     
 
 
@@ -218,30 +234,26 @@ ul{
 .cap{
     background-color: #2F303A;
    text-align: center;
+   padding-top: 200px;
+   padding-bottom: 200px;
+   
    
 }
 
-.title{
+ .title{
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 900;
     font-size: 44px;
     line-height: 60px;
-    /* or 136% */
+    
     
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     
     color: #FFFFFF;
-    padding-top: 200px;
-    padding-bottom: 280px;
-    padding-left: 452px;
-    padding-right: 452px;
-    min-width: 696px;
-    
-    margin-bottom: 30px;
-    display: flex;
+  
     
 }
 .btn{
@@ -251,9 +263,10 @@ ul{
     font-weight: 700;
     font-size: 16px;
     line-height: 30px;
-    /* identical to box height, or 188% */
+    margin-top: 30px;
+    
 
-   
+    
     align-items: center;
     
     letter-spacing: 0.06em;
@@ -286,7 +299,7 @@ ul{
     font-weight: 500;
     font-size: 16px;
     line-height: 26px;
-    /* identical to box height, or 162% */
+    
 
     border-radius: 4px;
     text-align: center;
@@ -304,7 +317,7 @@ ul{
     font-weight: 500;
     font-size: 16px;
     line-height: 26px;
-    /* identical to box height, or 162% */
+    
 
     text-align: center;
     letter-spacing: 0.03em;
@@ -321,7 +334,7 @@ ul{
     font-weight: 500;
     font-size: 16px;
     line-height: 26px;
-    /* identical to box height, or 162% */
+    
 
     text-align: center;
     letter-spacing: 0.03em;
@@ -338,7 +351,7 @@ ul{
     font-weight: 500;
     font-size: 16px;
     line-height: 26px;
-    /* identical to box height, or 162% */
+    
 
     text-align: center;
     letter-spacing: 0.03em;
@@ -355,7 +368,7 @@ ul{
     font-weight: 500;
     font-size: 16px;
     line-height: 26px;
-    /* identical to box height, or 162% */
+    
 
     text-align: center;
     letter-spacing: 0.03em;
@@ -366,7 +379,9 @@ ul{
 
 }
 .description{
-    margin-top: 94px;
+    padding-top: 115px;
+    /* padding-bottom: 69px; */
+    
 }
 
 .description-list{
@@ -376,6 +391,7 @@ ul{
     justify-content: flex-start;
     align-items: flex-start;
     align-content: flex-start;
+    
 }
 .description-item{
     margin-right: 30px;
@@ -403,23 +419,30 @@ ul{
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
-    /* or 171% */
+    
     
     letter-spacing: 0.03em;
     
     color: #757575;
 }
 .img{
-    margin-top: 69px;
+    padding-top: 69px;
+    padding-bottom: 111px;
+    
 }
 
 .img-b{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: flex-start;
+   display: flex;
+   align-items: center;
+   flex-wrap: nowrap;
+   justify-content: center;
     margin-top: 50px;
+}
+.img-a{
+    margin-right: 30px;
+}
+.img-a :last-child{
+    margin: 0;
 }
 
 .img-title{
@@ -430,13 +453,14 @@ ul{
     line-height: 42px;
     text-align: center;
     letter-spacing: 0.03em;
-    
+    margin-bottom: 50px;
     color: #212121;
 }
 
 .our-team{
     background-color: #ECECEC;
-    margin-top: 110px;
+    padding-top: 111px;
+    
 
 }
 .our-title{
@@ -447,7 +471,7 @@ ul{
     line-height: 42px;
     text-align: center;
     letter-spacing: 0.03em;
-    margin-top: 95px;
+   margin-bottom: 68px;
     color: #212121;
 }
 .our-team-list{
@@ -459,6 +483,7 @@ ul{
 }
 .our-team-item{
     margin-right: 30px;
+    margin-bottom: 94px;
     
 }
 .our-team-item :last-child{
@@ -471,7 +496,7 @@ ul{
     font-weight: 500;
     font-size: 16px;
     line-height: 19px;
-    /* identical to box height */
+     
 
     text-align: center;
     letter-spacing: 0.03em;
@@ -484,19 +509,19 @@ ul{
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
-    /* identical to box height */
+    
     text-align: center;
     
     letter-spacing: 0.03em;
 
     color: #757575;
 }
-.portfolio{
-    margin-top: 94px;
-}
+/* .portfolio{
+    
+} */
 .footer{
     background-color: #2F303A;
-    margin-top: 94px;
+    
     padding-top: 60px;
     padding-bottom: 60px;
     
@@ -509,8 +534,8 @@ ul{
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
-    /* or 171% */
     
+    margin-top: 9px;
     letter-spacing: 0.03em;
     
     color: rgba(255, 255, 255, 0.6);
@@ -522,7 +547,7 @@ ul{
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
-    /* or 171% */
+    margin-top: 20px;
 
     letter-spacing: 0.03em;
     text-decoration: none;
@@ -535,8 +560,8 @@ h3{
     font-weight: 700;
     font-size: 18px;
     line-height: 36px;
-    /* identical to box height, or 200% */
     
+    padding-top: 30px;
     letter-spacing: 0.06em;
     
     color: #212121;
@@ -547,9 +572,11 @@ p{
     font-weight: 400;
     font-size: 16px;
     line-height: 30px;
-    /* identical to box height, or 188% */
-    
-    letter-spacing: 0.03em;
-    
     color: #757575;
+    letter-spacing: 0.03em;
+    padding-bottom: 107px;
+    padding-top: 10px;
 }
+
+
+
