--- a/css/styles.css
+++ b/css/styles.css
@@ -6,24 +6,20 @@
 
 
 .body{
-    background-color:#ECECEC;
+    
     font-family: 'Roboto';
     font-style: normal;
 }
 .list{
-    padding: 0;
-    margin: 0;
+    /* padding: 0;
+    margin: 0; */
     list-style: none;
 }
 
-h1, h2, h3, p{
+/* h1, h2, h3, p{
     margin: 0;
-}
-h3{
-    padding-bottom: 10px;
-    padding-top: 30px;
-    
-}
+} */
+
 
 .container{
     width: 1200px; 
@@ -33,6 +29,11 @@ h3{
     margin-right: auto;
     
  
+}
+.page-header{
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color:#ECECEC;
 }
 .header-container{
     display: flex;
@@ -127,6 +128,10 @@ ul{
     margin-right: 50px;
     
 }
+.portfolio{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 
 
  
@@ -153,31 +158,63 @@ ul{
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0;
    
 }
 .projects-item{
     margin-right: 30px;
     width: 370px;
+   
+   
+}
+.projects-item :last-child{
+    margin: 0;
 }
 
-/* .projects-item :last-child{
-    margin: 0;
-} */
+
 .projects-naim{
     padding: 20px 24px 20px 24px;
-    border: 1px solid transparent;
+    border-top-width: 1px;
+    border-top-style: solid;
+    border-top-color: #EEEEEE;
+
+    /* Установит стили правой рамки */
+    border-right-width: 1px;
+    border-right-style: solid;
+    border-right-color: #EEEEEE;
+
+    /* Установит стили нинжней рамки */
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: #EEEEEE;
+
+    /* Установит стили левой рамки */
+    border-left-width: 1px;
+    border-left-style: solid;
+    border-left-color: #EEEEEE;
+}
+.proj-naim {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 36px;
+    letter-spacing: 0.06em;
+    color: #212121;
 }
 
-.projects-item :nth-child(3n){
-    margin-right: 0;
-} 
-/* .projects-item :nth-last-child(-n+3){
-    margin-bottom: 0;
-} */
-/* .projects-item :not(nth-child(3n)){
-    margin-right: 30px;
-} */
-    
+.proj-tex {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    color: #757575;
+    letter-spacing: 0.03em;
+    margin-top: 4px;
+}
+
+
 
 
 .link{
@@ -237,7 +274,7 @@ ul{
    
 }
 
- .title{
+.title{
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 900;
@@ -376,8 +413,8 @@ ul{
 
 }
 .description{
-    padding-top: 115px;
-    /* padding-bottom: 69px; */
+    padding-top: 94px;
+    
     
 }
 
@@ -406,7 +443,7 @@ ul{
     line-height: 16px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    
+    margin-bottom: 10px;
     color: #212121;
 
 }
@@ -416,15 +453,12 @@ ul{
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
-    
-    
-    letter-spacing: 0.03em;
-    
+   letter-spacing: 0.03em;
     color: #757575;
 }
 .img{
-    padding-top: 69px;
-    padding-bottom: 111px;
+    padding-top: 94px;
+    
     
 }
 
@@ -455,8 +489,8 @@ ul{
 }
 
 .our-team{
-    background-color: #ECECEC;
-    padding-top: 111px;
+    background-color: #F5F4FA;
+    padding-top: 94px;
     
 
 }
@@ -468,7 +502,7 @@ ul{
     line-height: 42px;
     text-align: center;
     letter-spacing: 0.03em;
-   margin-bottom: 68px;
+   margin-bottom: 50px;
     color: #212121;
 }
 .our-team-list{
@@ -485,6 +519,10 @@ ul{
 }
 .our-team-item :last-child{
     margin: 0;
+}
+.text-cards{
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .img-naim{
@@ -510,12 +548,10 @@ ul{
     text-align: center;
     
     letter-spacing: 0.03em;
-
+    margin-top: 10px;
     color: #757575;
 }
-/* .portfolio{
-    
-} */
+
 .footer{
     background-color: #2F303A;
     
@@ -551,29 +587,7 @@ ul{
     color: #FFFFFF;
 
 }
-h3{
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 36px;
-    
-    padding-top: 30px;
-    letter-spacing: 0.06em;
-    
-    color: #212121;
-}
-p{
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 30px;
-    color: #757575;
-    letter-spacing: 0.03em;
-    padding-bottom: 107px;
-    padding-top: 10px;
-}
+
 
 
 
